fix team image centering on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -96,6 +96,10 @@
         width: 65%;
         padding-bottom: 35px;
     }
+
+    #top-description .panel-body img {
+        margin-left: 30px;
+    }
 }
 
 .caption-content {
